<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/tx_datadiri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tx_datadiri"
        android:textSize="50dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tx_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:text="@string/tx_nama"
        android:textSize="24dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tx_nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/tx_nim"
        android:textSize="24dp"
        android:textColor="@color/black" />
</LinearLayout>