<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="302dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        tools:srcCompat="@drawable/ilustration" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_About" />

        <Button
            android:id="@+id/buttonMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_Movie" />

        <Button
            android:id="@+id/buttonLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_Lang" />

    </LinearLayout>

</LinearLayout>